2015-03-30  Jose E. Marchesi  <jemarch@gnu.org>

	install plugins without the 'lib' prefix.
	* src/plugins/fail_mem/Makefile.am (lib_LTLIBRARIES): libfail_mem
	renamed to fail_mem.
	(fail_mem_la_SOURCES): Renamed from libfail_mem_la_SOURCES.
	(fail_mem_la_LDFLAGS): Renamed from libfail_mem_la_LDFLAGS.
	* src/plugins/fail_mem/Makefile.am (libfail_mem_la_LDFLAGS): Use
	-module.

	* src/plugins/inhibit/Makefile.am (lib_LTLIBRARIES): libinhibit
	renamed to inhibit.
	(inhibit_la_SOURCES): Renamed from libinhibit_la_SOURCES.
	(inhibit_la_LDFLAGS): Renamed from libinhibit_la_LDFLAGS.
	(inhibit_la_LDFLAGS): Use -module.

2015-03-29  Jose E. Marchesi  <jemarch@gnu.org>

	* src/plugins.c: header fixed.
	* src/plugins.h: Likewise.

2015-03-29  Jose E. Marchesi  <jemarch@gnu.org>

	* doc/cockroach.texi: Copyright years updated.
	* doc/Makefile.am: Likewise.

2015-03-29  Jose E. Marchesi  <jemarch@gnu.org>

	* src/Makefile.am (cockroach_LDADD): Use $top_builddir in paths.
	* src/plugins/inhibit/Makefile.am (AM_CFLAGS): Use $srcdir in
	paths.

2015-03-29  Jose E. Marchesi  <jemarch@gnu.org>

	* src/cockroach.c (cockroach_print_version): Copyright years updated.

2015-03-29  Jose E. Marchesi  <jemarch@gnu.org>

	* .gitignore: updated.

2015-03-29  Jose E. Marchesi  <jemarch@gnu.org>

	copyright years updated and program name fixed in notices.
	* src/bitmap.c: Fix program name in copyright notice, and update
	year.
	* README-dev: Likewise.
	* Makefile.am: Likewise.
	* ChangeLog: Likewise.
	* tests/test_bitmap.c: Likewise.
	* tests/Makefile.am: Likewise.
	* src/plugins/inhibit/Makefile.am: Likewise.
	* src/plugins/inhibit/inhibit.c: Likewise.
	* src/arch/linux_generic.c: Likewise.
	* src/arch/linux_i386.c: Likewise.
	* src/plugins.c: Likewise.
	* src/Makefile.am: Likewise.
	* src/bitmap.h: Likewise.

2015-03-24  Giuseppe Scrivano  <gscrivan@redhat.com>

	* src/cockroach.c (main): roach_wait doesn't return a status
	anymore.
	* src/roach.c (roach_wait): Wake up stopped processes.
